--- a/templates/layouts/sub_base.html
+++ b/templates/layouts/sub_base.html
@@ -42,6 +42,10 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-disabled="true">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-disabled="true" href="">Khalti</a>
+                    </li>
+                    
                 </ul>
                 {#                <form class="d-flex" role="search">#}
                 {#                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
