--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -45,7 +45,38 @@
         </div>
         <br>
     {% endif %}
+    <div class="row">
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-6"></div>
+                <div class="col-md-6">
+                    <br><br>
+                    <a href="{% url 'home_page' %}" class="btn btn-primary">Clear</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-6">
+                    <br>
+                    <label>Filter by category:</label>
+                    <select class="form-control">
+                        {% for Category in categories %}
+                        <option value="{{ Category.id }}"> {{ Category.title }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="col-md-6">
+                    <br><br>
+                    <form method="post">
+                    <input style="width: 72%; display: inline;" type="text" placeholder="search" class="form-control" name="search" value="{{ request.Get.search }}">
+                    <button style="margin-left: 5px;" class="btn btn-success">Submit</button>
+                </form>
+            </div>
+            </div>
+        </div>
     <div style="display: flex; flex-wrap: wrap;">
+        </div>
         {% for job in object_list %}
             <div class="card" style="flex: 0 0 20%; margin: 5px; padding: 10px; width: 20%">
                 <img class="card-img-top" style="height: 40%; width: 40%" src="{% static 'main/job/job.svg' %}"
@@ -58,9 +89,11 @@
                     <p class="card-text" style="font-size: 0.8rem; color: red"><i
                             class="fa fa-clock-o"></i> {{ job.apply_before }}</p>
                     {% if request.user.is_authenticated %}
-                        <a href="#" data-toggle="modal" data-target="#apply_{{ job.id }}"
-                           class="btn btn-outline-primary" style="float: right">Apply Now</a>
-
+                    {% if not job.applied %}
+                        <a href="{% url 'user_login' %}" class="btn btn-outline-primary" style="float: right">Apply Now</a>
+                           {% else %}
+                           <button class="btn btn-outline-primary" disabled style="float: right">Applied</button>
+                           {% endif %}
                         <div class="modal fade" id="apply_{{ job.id }}" tabindex="-1" role="dialog"
                              aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
@@ -81,12 +114,18 @@
                             </div>
                         </div>
                     {% else %}
-                        <a href="{% url 'user_login' %}" class="btn btn-outline-primary" style="float: right">Apply
-                            Now</a>
+                    {% if not job.applied %}
+                        <a href="{% url 'user_login' %}" class="btn btn-outline-primary" style="float: right">
+                            Apply Now
+                            
+                        </a>
+                        {% else %}
+                        <button class="btn btn-outline-primary" disabled>Applied</button>
+                    {% endif %}
                     {% endif %}
                 </div>
             </div>
-        {% endfor %}
+            {% endfor %}
 
     </div>
     {% if is_paginated %}
