--- a/templates/main/khalti_payment.html
+++ b/templates/main/khalti_payment.html
@@ -26,16 +26,16 @@
                 onSuccess (payload) {
                     // hit merchant api for initiating verfication
                     console.log(payload);
-                    const url = "http://127.0.1:8000/payment-verify/"
-                    const data = {token:payload.token}
+                    const url = "http://127.0.0.1:8000/payment-verify/"
+                    const formData = new FormData();
                     formData.append("token", payload.token)
                     fetch(url, {
                         method: "POST",
                         body: formData
-                    }
-                    ).then (response=>{
+                    }).then(response=>{
                         document.location.href = "http://127.0.0.1:8000"
                     })
+
                 },
                 onError (error) {
                     console.log(error);
