--- a/templates/layouts/sub_base.html
+++ b/templates/layouts/sub_base.html
@@ -40,7 +40,7 @@
                     {#                        </ul>#}
                     {#                    </li>#}
                     <li class="nav-item">
-                        <a class="nav-link" aria-disabled="true">Contact</a>
+                        <a class="nav-link" href="#" haria-disabled="true">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'khalti_payment' %}" class="nav-link">Khalti</a>
